# lpjg-gui

./: .gitignore  .gitmodules  Makefile  README.md  example.toml
.github/workflows/: ci.yml
python/: README.md  pyproject.toml
python/lpjguess/: __init__.py
python/lpjguess_runner/: __init__.py  _loader.py
src/: Configuration.cs  LpjGuess.Frontend.csproj  LpjGuess.sln  Program.cs  Runner.cs
src/Attributes/: FileNameAttribute.cs  UIAttribute.cs
src/EventTypes/: Event.cs
src/Interfaces/: IFileView.cs  IMainView.cs  IPresenter.cs  IPropertiesView.cs  IPropertyPresenter.cs  IView.cs
src/LpjGuess.Core/: LpjGuess.Core.csproj
src/LpjGuess.Core/Extensions/: EnumerableExtensions.cs  FactorExtensions.cs  QuantityExtensions.cs  StringExtensions.cs  StyleVariationStrategyExtensions.cs
src/LpjGuess.Core/Helpers/: InstructionFileHelper.cs
src/LpjGuess.Core/Interfaces/: IDataSource.cs  ISimulation.cs
src/LpjGuess.Core/Logging/: CustomConsoleFormatter.cs  CustomConsoleFormatterOptions.cs  LogFilter.cs  LoggingConfiguration.cs  LoggingOptions.cs
src/LpjGuess.Core/Models/: CapitalisationPolicy.cs  DataSourceType.cs  DynamicLayers.cs  ExistingOutputPolicy.cs  Gridcell.cs  ILayerDefinitions.cs  InstructionParameter.cs  LpjFile.cs  ModelConstants.cs  ModelOutput.cs  OutputFile.cs  OutputFileMetadata.cs  SeriesContext.cs  SimulationConfiguration.cs  SimulationIndex.cs  SimulationManifest.cs  StaticLayers.cs  Workspace.cs
src/LpjGuess.Core/Parsers/: Gridlist.cs  GridlistParser.cs  IGridlistParser.cs  IInstructionFileParser.cs  InstructionFileNormaliser.cs  InstructionFileParser.cs
src/LpjGuess.Core/Runners/: LocalRunner.cs  RunnerConstants.cs  RunnerFactory.cs
src/LpjGuess.Core/Serialisation/: XmlSerialisation.cs
src/LpjGuess.Core/Services/: ExperimentDesignAnalyser.cs  ExperimentInstructionFileAnalyser.cs  IInstructionFileParserFactory.cs  IModelOutputParser.cs  IOutputFileTypeResolver.cs  InstructionFileParserFactory.cs  ModelOutputParser.cs  OutputFileDefinitions.cs  OutputFileTypeResolver.cs
src/LpjGuess.Core/Utility/: CompressionUtility.cs  ExceptionHelper.cs  MathUtility.cs  TimeUtils.cs
src/LpjGuess.Frontend/: Configuration.cs  Gtk4Application.cs  IApplication.cs  LpjGuess.Frontend.csproj  Program.cs
src/LpjGuess.Frontend/Attributes/: DefaultImplementationAttribute.cs  GenericPresenterAttribute.cs  RegisterGenericTypeAttribute.cs  RegisterPresenterAttribute.cs  RegisterStandalonePresenter.cs
src/LpjGuess.Frontend/Classes/: DataItem.cs  GroupHeaderItem.cs  IDropDownGroupItem.cs  InstructionFile.cs  NameAndDescription.cs  ParameterChange.cs  PropertyGroup.cs  PropertyPage.cs  RunnerMetadata.cs  Simulation.cs  SimulationDescription.cs  SimulationPreviewRow.cs  SimulationReader.cs
src/LpjGuess.Frontend/Commands/: AddElementCommand.cs  ColourStyleProviderChangeCommand.cs  CommandRegistry.cs  CompositeCommand.cs  EnumStyleProviderChangeCommand.cs  LineSeriesValidationCommand.cs  PropertyChangeCommand.cs  RemoveElementCommand.cs  ScatterSeriesValidationCommand.cs  SeriesValidationCommand.cs  SeriesValidationCommandFactory.cs  StyleproviderChangeCommandBase.cs.cs
src/LpjGuess.Frontend/Config/: Options.cs
src/LpjGuess.Runner/: ExperimentResult.cs  ExperimentRunner.cs  InstructionFileNormaliser.cs  LpjGuess.Runner.csproj  Program.cs
src/LpjGuess.Runner.CLI/: LpjGuess.Runner.CLI.csproj  Program.cs
src/LpjGuess.Tests/: EnumerableExtensionTests.cs  LpjGuess.Tests.csproj  StringExtensionTests.cs  TempDirectory.cs  TempFile.cs
src/Presenters/: BoolPropertyPresenter.cs  FileNamePresenter.cs  FilePresenter.cs  MainPresenter.cs  NoFilePresenter.cs  PresenterBase.cs  PropertiesPresenter.cs  PropertyPresenterBase.cs
src/Utility/: StyleClasses.cs  XmlDocumentation.cs
src/Views/: AboutView.cs  BoolPropertyView.cs  FileNameView.cs  FileView.cs  MainView.cs  PropertiesDialog.cs  PropertiesView.cs
(+463 files in other folders)
