# python/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lpjguess-runner"
# Version is managed by setuptools-scm from Git tags
dynamic = ["version"]
description = "Python wrapper for LPJ-Guess experiment runner (via pythonnet + .NET 9)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Drew Holzworth", email = "d.holzworth@westernsydney.edu.au" }
]
keywords = ["LPJ-Guess", "dynamic", "vegetation", "model", "DGVM", "ecosystem",
            "simulation", "experiments"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]

dependencies = [
  "pythonnet>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/hie-dave/lpjg-gui"
Source = "https://github.com/hie-dave/lpjg-gui"
Issues = "https://github.com/hie-dave/lpjg-gui/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
lpjguess_runner = ["rids/**"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lpjguess_runner"]

[tool.setuptools_scm]
root = ".."
